src/parser.output
   0  $accept : %entry% $end

   1  program : stmts EOF

   2  stmts :
   3        | stmts stmt

   4  stmt : expr SEMI
   5       | RETURN SEMI
   6       | RETURN expr SEMI
   7       | LBRACE stmts RBRACE
   8       | IF LPAREN expr RPAREN stmt
   9       | IF LPAREN expr RPAREN stmt ELSE stmt
  10       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  11       | WHILE LPAREN expr RPAREN stmt
  12       | DEF func
  13       | STRUCT struct_decl

  14  expr_opt :
  15           | expr

  16  any_typ_not_void : STRING
  17                   | FLOAT
  18                   | INT
  19                   | BOOL

  20  any_typ : any_typ_not_void
  21          | VOID

  22  vdecl_list :
  23             | vdecl_list vdecl

  24  vdecl : any_typ_not_void ID SEMI

  25  func : any_typ ID LPAREN formals_opt RPAREN LBRACE stmts RBRACE

  26  struct_decl : ID LBRACE vdecl_list RBRACE SEMI

  27  formals_opt :
  28              | formal_list

  29  formal_list : any_typ_not_void ID
  30              | formal_list COMMA any_typ ID

  31  expr : INTLIT
  32       | FLOATLIT
  33       | STRINGLIT
  34       | TRUE
  35       | FALSE
  36       | ID
  37       | expr PLUS expr
  38       | expr MINUS expr
  39       | expr TIMES expr
  40       | expr DIVIDE expr
  41       | expr EQ expr
  42       | expr NEQ expr
  43       | expr LT expr
  44       | expr LEQ expr
  45       | expr GT expr
  46       | expr GEQ expr
  47       | expr AND expr
  48       | expr OR expr
  49       | expr DOT expr
  50       | STRUCT ID ID
  51       | MINUS expr
  52       | NOT expr
  53       | ID ASSIGN expr
  54       | ID LPAREN actuals_opt RPAREN
  55       | LPAREN expr RPAREN
  56       | GLOBAL ID ASSIGN expr

  57  actuals_opt :
  58              | actuals_list

  59  actuals_list : expr
  60               | actuals_list COMMA expr

  61  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (61)
	stmts : .  (2)

	.  reduce 2

	program  goto 3
	stmts  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (61)

	.  reduce 61


state 4
	program : stmts . EOF  (1)
	stmts : stmts . stmt  (3)

	LPAREN  shift 5
	LBRACE  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	RETURN  shift 11
	IF  shift 12
	FOR  shift 13
	WHILE  shift 14
	DEF  shift 15
	GLOBAL  shift 16
	STRUCT  shift 17
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	EOF  shift 22
	.  error

	stmt  goto 23
	expr  goto 24


state 5
	expr : LPAREN . expr RPAREN  (55)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 26


state 6
	stmt : LBRACE . stmts RBRACE  (7)
	stmts : .  (2)

	.  reduce 2

	stmts  goto 27


state 7
	expr : MINUS . expr  (51)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 28


state 8
	expr : NOT . expr  (52)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 29


state 9
	expr : TRUE .  (34)

	.  reduce 34


state 10
	expr : FALSE .  (35)

	.  reduce 35


state 11
	stmt : RETURN . SEMI  (5)
	stmt : RETURN . expr SEMI  (6)

	SEMI  shift 30
	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 31


state 12
	stmt : IF . LPAREN expr RPAREN stmt  (8)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (9)

	LPAREN  shift 32
	.  error


state 13
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (10)

	LPAREN  shift 33
	.  error


state 14
	stmt : WHILE . LPAREN expr RPAREN stmt  (11)

	LPAREN  shift 34
	.  error


state 15
	stmt : DEF . func  (12)

	INT  shift 35
	FLOAT  shift 36
	BOOL  shift 37
	STRING  shift 38
	VOID  shift 39
	.  error

	func  goto 40
	any_typ_not_void  goto 41
	any_typ  goto 42


state 16
	expr : GLOBAL . ID ASSIGN expr  (56)

	ID  shift 43
	.  error


state 17
	stmt : STRUCT . struct_decl  (13)
	expr : STRUCT . ID ID  (50)

	ID  shift 44
	.  error

	struct_decl  goto 45


state 18
	expr : INTLIT .  (31)

	.  reduce 31


state 19
	expr : FLOATLIT .  (32)

	.  reduce 32


state 20
	expr : STRINGLIT .  (33)

	.  reduce 33


state 21
	expr : ID .  (36)
	expr : ID . ASSIGN expr  (53)
	expr : ID . LPAREN actuals_opt RPAREN  (54)

	LPAREN  shift 46
	ASSIGN  shift 47
	SEMI  reduce 36
	RPAREN  reduce 36
	COMMA  reduce 36
	PLUS  reduce 36
	MINUS  reduce 36
	TIMES  reduce 36
	DIVIDE  reduce 36
	EQ  reduce 36
	NEQ  reduce 36
	LT  reduce 36
	LEQ  reduce 36
	GT  reduce 36
	GEQ  reduce 36
	AND  reduce 36
	OR  reduce 36
	DOT  reduce 36


state 22
	program : stmts EOF .  (1)

	.  reduce 1


state 23
	stmts : stmts stmt .  (3)

	.  reduce 3


state 24
	stmt : expr . SEMI  (4)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . DOT expr  (49)

	SEMI  shift 48
	PLUS  shift 49
	MINUS  shift 50
	TIMES  shift 51
	DIVIDE  shift 52
	EQ  shift 53
	NEQ  shift 54
	LT  shift 55
	LEQ  shift 56
	GT  shift 57
	GEQ  shift 58
	AND  shift 59
	OR  shift 60
	DOT  shift 61
	.  error


state 25
	expr : STRUCT . ID ID  (50)

	ID  shift 62
	.  error


state 26
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . DOT expr  (49)
	expr : LPAREN expr . RPAREN  (55)

	RPAREN  shift 63
	PLUS  shift 49
	MINUS  shift 50
	TIMES  shift 51
	DIVIDE  shift 52
	EQ  shift 53
	NEQ  shift 54
	LT  shift 55
	LEQ  shift 56
	GT  shift 57
	GEQ  shift 58
	AND  shift 59
	OR  shift 60
	DOT  shift 61
	.  error


state 27
	stmts : stmts . stmt  (3)
	stmt : LBRACE stmts . RBRACE  (7)

	LPAREN  shift 5
	LBRACE  shift 6
	RBRACE  shift 64
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	RETURN  shift 11
	IF  shift 12
	FOR  shift 13
	WHILE  shift 14
	DEF  shift 15
	GLOBAL  shift 16
	STRUCT  shift 17
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	stmt  goto 23
	expr  goto 24


state 28
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . DOT expr  (49)
	expr : MINUS expr .  (51)

	DOT  shift 61
	SEMI  reduce 51
	RPAREN  reduce 51
	COMMA  reduce 51
	PLUS  reduce 51
	MINUS  reduce 51
	TIMES  reduce 51
	DIVIDE  reduce 51
	EQ  reduce 51
	NEQ  reduce 51
	LT  reduce 51
	LEQ  reduce 51
	GT  reduce 51
	GEQ  reduce 51
	AND  reduce 51
	OR  reduce 51


state 29
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . DOT expr  (49)
	expr : NOT expr .  (52)

	DOT  shift 61
	SEMI  reduce 52
	RPAREN  reduce 52
	COMMA  reduce 52
	PLUS  reduce 52
	MINUS  reduce 52
	TIMES  reduce 52
	DIVIDE  reduce 52
	EQ  reduce 52
	NEQ  reduce 52
	LT  reduce 52
	LEQ  reduce 52
	GT  reduce 52
	GEQ  reduce 52
	AND  reduce 52
	OR  reduce 52


state 30
	stmt : RETURN SEMI .  (5)

	.  reduce 5


state 31
	stmt : RETURN expr . SEMI  (6)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . DOT expr  (49)

	SEMI  shift 65
	PLUS  shift 49
	MINUS  shift 50
	TIMES  shift 51
	DIVIDE  shift 52
	EQ  shift 53
	NEQ  shift 54
	LT  shift 55
	LEQ  shift 56
	GT  shift 57
	GEQ  shift 58
	AND  shift 59
	OR  shift 60
	DOT  shift 61
	.  error


state 32
	stmt : IF LPAREN . expr RPAREN stmt  (8)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (9)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 66


state 33
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (10)
	expr_opt : .  (14)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	SEMI  reduce 14

	expr  goto 67
	expr_opt  goto 68


state 34
	stmt : WHILE LPAREN . expr RPAREN stmt  (11)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 69


state 35
	any_typ_not_void : INT .  (18)

	.  reduce 18


state 36
	any_typ_not_void : FLOAT .  (17)

	.  reduce 17


state 37
	any_typ_not_void : BOOL .  (19)

	.  reduce 19


state 38
	any_typ_not_void : STRING .  (16)

	.  reduce 16


state 39
	any_typ : VOID .  (21)

	.  reduce 21


state 40
	stmt : DEF func .  (12)

	.  reduce 12


state 41
	any_typ : any_typ_not_void .  (20)

	.  reduce 20


state 42
	func : any_typ . ID LPAREN formals_opt RPAREN LBRACE stmts RBRACE  (25)

	ID  shift 70
	.  error


state 43
	expr : GLOBAL ID . ASSIGN expr  (56)

	ASSIGN  shift 71
	.  error


state 44
	struct_decl : ID . LBRACE vdecl_list RBRACE SEMI  (26)
	expr : STRUCT ID . ID  (50)

	LBRACE  shift 72
	ID  shift 73
	.  error


state 45
	stmt : STRUCT struct_decl .  (13)

	.  reduce 13


state 46
	expr : ID LPAREN . actuals_opt RPAREN  (54)
	actuals_opt : .  (57)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	RPAREN  reduce 57

	expr  goto 74
	actuals_opt  goto 75
	actuals_list  goto 76


state 47
	expr : ID ASSIGN . expr  (53)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 77


state 48
	stmt : expr SEMI .  (4)

	.  reduce 4


state 49
	expr : expr PLUS . expr  (37)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 78


state 50
	expr : expr MINUS . expr  (38)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 79


state 51
	expr : expr TIMES . expr  (39)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 80


state 52
	expr : expr DIVIDE . expr  (40)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 81


state 53
	expr : expr EQ . expr  (41)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 82


state 54
	expr : expr NEQ . expr  (42)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 83


state 55
	expr : expr LT . expr  (43)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 84


state 56
	expr : expr LEQ . expr  (44)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 85


state 57
	expr : expr GT . expr  (45)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 86


state 58
	expr : expr GEQ . expr  (46)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 87


state 59
	expr : expr AND . expr  (47)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 88


state 60
	expr : expr OR . expr  (48)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 89


state 61
	expr : expr DOT . expr  (49)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 90


state 62
	expr : STRUCT ID . ID  (50)

	ID  shift 73
	.  error


state 63
	expr : LPAREN expr RPAREN .  (55)

	.  reduce 55


state 64
	stmt : LBRACE stmts RBRACE .  (7)

	.  reduce 7


state 65
	stmt : RETURN expr SEMI .  (6)

	.  reduce 6


state 66
	stmt : IF LPAREN expr . RPAREN stmt  (8)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (9)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . DOT expr  (49)

	RPAREN  shift 91
	PLUS  shift 49
	MINUS  shift 50
	TIMES  shift 51
	DIVIDE  shift 52
	EQ  shift 53
	NEQ  shift 54
	LT  shift 55
	LEQ  shift 56
	GT  shift 57
	GEQ  shift 58
	AND  shift 59
	OR  shift 60
	DOT  shift 61
	.  error


state 67
	expr_opt : expr .  (15)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . DOT expr  (49)

	PLUS  shift 49
	MINUS  shift 50
	TIMES  shift 51
	DIVIDE  shift 52
	EQ  shift 53
	NEQ  shift 54
	LT  shift 55
	LEQ  shift 56
	GT  shift 57
	GEQ  shift 58
	AND  shift 59
	OR  shift 60
	DOT  shift 61
	SEMI  reduce 15
	RPAREN  reduce 15


state 68
	stmt : FOR LPAREN expr_opt . SEMI expr SEMI expr_opt RPAREN stmt  (10)

	SEMI  shift 92
	.  error


state 69
	stmt : WHILE LPAREN expr . RPAREN stmt  (11)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . DOT expr  (49)

	RPAREN  shift 93
	PLUS  shift 49
	MINUS  shift 50
	TIMES  shift 51
	DIVIDE  shift 52
	EQ  shift 53
	NEQ  shift 54
	LT  shift 55
	LEQ  shift 56
	GT  shift 57
	GEQ  shift 58
	AND  shift 59
	OR  shift 60
	DOT  shift 61
	.  error


state 70
	func : any_typ ID . LPAREN formals_opt RPAREN LBRACE stmts RBRACE  (25)

	LPAREN  shift 94
	.  error


state 71
	expr : GLOBAL ID ASSIGN . expr  (56)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	GLOBAL  shift 16
	STRUCT  shift 25
	INTLIT  shift 18
	FLOATLIT  shift 19
	STRINGLIT  shift 20
	ID  shift 21
	.  error

	expr  goto 95


state 72
	struct_decl : ID LBRACE . vdecl_list RBRACE SEMI  (26)
	vdecl_list : .  (22)

	.  reduce 22

	vdecl_list  goto 96


state 73
	expr : STRUCT ID ID .  (50)

	.  reduce 50


state 74
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . DOT expr  (49)
	actuals_list : expr .  (59)

	PLUS  shift 49
	MINUS  shift 50
	TIMES  shift 51
	DIVIDE  shift 52
	EQ  shift 53
	NEQ  shift 54
	LT  shift 55
	LEQ  shift 56
	GT  shift 57
	GEQ  shift 58
	AND  shift 59
	OR  shift 60
	DOT  shift 61
	RPAREN  reduce 59
	COMMA  reduce 59


state 75
	expr : ID LPAREN actuals_opt . RPAREN  (54)

	RPAREN  shift 97
	.  error


state 76
	actuals_opt : actuals_list .  (58)
	actuals_list : actuals_list . COMMA expr  (60)

	COMMA  shift 98
	RPAREN  reduce 58


state 77
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . DOT expr  (49)
	expr : ID ASSIGN expr .  (53)

	PLUS  shift 49
	MINUS  shift 50
	TIMES  shift 51
	DIVIDE  shift 52
	EQ  shift 53
	NEQ  shift 54
	LT  shift 55
	LEQ  shift 56
	GT  shift 57
	GEQ  shift 58
	AND  shift 59
	OR  shift 60
	DOT  shift 61
	SEMI  reduce 53
	RPAREN  reduce 53
	COMMA  reduce 53


state 78
	expr : expr . PLUS expr  (37)
	expr : expr PLUS expr .  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . DOT expr  (49)

	TIMES  shift 51
	DIVIDE  shift 52
	DOT  shift 61
	SEMI  reduce 37
	RPAREN  reduce 37
	COMMA  reduce 37
	PLUS  reduce 37
	MINUS  reduce 37
	EQ  reduce 37
	NEQ  reduce 37
	LT  reduce 37
	LEQ  reduce 37
	GT  reduce 37
	GEQ  reduce 37
	AND  reduce 37
	OR  reduce 37


state 79
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr MINUS expr .  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LEQ expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GEQ expr  (46)
	expr : expr . AND expr  (47)
	expr : expr . OR expr  (48)
	expr : expr . DOT expr  (49)

	TIMES  shift 51
	DIVIDE  shift 52
	DOT  shift 61
	SEMI  reduce 38
	RPAREN  reduce 38
	COMMA  reduce 38
	PLUS  reduce 38
	MINUS  reduce 38
	EQ  reduce 38
	NEQ  reduce 38
	LT  reduce 38
	LEQ  reduce 38
	GT  reduce 38
	GEQ  reduce 38
	AND  reduce 38
	OR  reduce 38

